test/org/midica/testfiles/failing/eff-flow-rpn-num-too-high.midica
INCLUDE inc/instruments.midica


0: rpn=16384.set(50)
